Fix img alignment issues section 2

--- a/style.css
+++ b/style.css
@@ -114,7 +114,6 @@ h3 {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: space-between;
     align-items: center;
     gap: 10px;
     flex: 0 1 150px;
@@ -123,7 +122,7 @@ h3 {
     text-align: center;
 }
 img {
-    width: 150px;
+    height: 150px;
 }
 
 .section-three {
